# Octopus

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/: mlc_config.json
.github/workflows/: ci.yml
agent/: Dockerfile  requirements.txt
agent/src/: __init__.py  manager.py
agent/src/agents/: __init__.py  macro_agent.py  research_agent.py  strategy_agent.py  trading_agent.py  (+1 more)
agent/tests/: test_manager.py
docs/: README.md  api.md  architecture.md  contributing.md  deployment.md  engine.md  macro.md  testing.md
engine/: Dockerfile  requirements.txt
engine/src/: __init__.py
engine/tests/: conftest.py  requirements-test.txt  test_actor_critic.py  test_environment.py  test_jepa.py  test_mcts.py  test_replay_buffer.py  test_trader.py  test_world_model.py
execution/: Cargo.toml  Dockerfile  build.rs
execution/proto/: octopus.proto
execution/src/: client.rs  executor.rs  main.rs
hermes-config/: README.md
hermes-config/skills/: octopus-backtest-pipeline.md  octopus-macro-pipeline.md  octopus-research-pipeline.md  octopus-training-pipeline.md
invest/: Dockerfile  requirements.txt
invest/src/: invest_manager.py  portfolio.py  trade_republic_client.py
macro/: Dockerfile  requirements.txt
macro/src/: __init__.py  calendar.py  central_banks.py  macro_features.py  sentiment.py
macro/tests/: test_macro.py
orchestrator/: Dockerfile  go.mod
orchestrator/cmd/: main.go
quant/: Dockerfile
quant/src/: Octopus.jl
web/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx
(+24 files in other folders)
