[package]
name = "octopus-execution"
version = "0.1.0"
edition = "2021"
description = "Octopus Trading Engine — MT5 execution module with gRPC communication"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
rand = "0.8"
thiserror = "2"

[build-dependencies]
tonic-build = "0.12"